# WASTE

./: .gitignore  README.md  pyproject.toml
waste/: __init__.py  __main__.py  player.py  ui.py
waste/data/: origins.json  perks.json  skills.json  special.json
waste/ui/: confirmation_dialog.glade~  edit_player.glade  edit_player.glade~  fallout.glade~  waste.glade
